[tool.poetry]
name = "example-discord-bot"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"
discord = "^2.3.2"
django = "^5.1.5"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
